2003-04-04  David Hyatt  <hyatt@apple.com>

	Fix for the Search button cutoff on livepage.apple.com  We
	weren't honoring hspace/vspace on input elements.
	
        Reviewed by darin

        * khtml/html/html_formimpl.cpp:
        (HTMLInputElementImpl::parseAttribute):

2003-04-04  David Hyatt  <hyatt@apple.com>

	Fix for 3218085.  Remove the bogus 2cm print rule for body in the
	html4.css sheet.
	
        Reviewed by darin/trey

        * khtml/css/html4.css:

2003-04-04  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed 3217687 -- REGRESSION: printing uses widths from screen fonts, messing up layout

        To get the style machinery working for me instead of against me, I had to introduce both
        FontDef and QFont to the screen/printer font dichotomy. Just following that through took
        care of the bugs we were seeing.

        * khtml/rendering/font.h: Add a usePrinterFont field to FontDef (in APPLE_CHANGES).
        * khtml/rendering/font.cpp: (Font::update): Set the new "printer font" field on the QFont
        (in APPLE_CHANGES).
        
        * khtml/xml/dom_docimpl.cpp: (DocumentImpl::recalcStyle): Set usePrinterFont field on the
        document's fontDef (in APPLE_CHANGES).
        
        * kwq/KWQFont.h: Add isPrinterFont, setter, getter.
        * kwq/KWQFont.mm:
        (QFont::QFont): Default isPrinterFont to false, copy when copying.
        (QFont::operator=): Copy isPrinterFont.
        (QFont::setPrinterFont): Added.
        (QFont::operator==): Compare isPrinterFont.
        
        * kwq/KWQFontMetrics.mm: Remove the _rendererUsesPrinterFont field and associated code.
        This was only needed when the same QFont could be both printer and screen font, but now
        the QFont itself is different.
        * kwq/KWQPainter.mm: (QPainter::_updateRenderer): Remove textRendererUsesPrinterFont field
        and associated code, for same reason as above.
        