@@ -1,3 +1,15 @@
+2003-04-04  Darin Adler  <darin@apple.com>
+
+        Reviewed by Dave.
+
+	- fixed 3125850 -- VIP: "search by goo" instead of "search by google" at livepage.apple.com
+        
+        We decided not to fix the general problem right now, but just hack the site.
+
+        * khtml/html/html_formimpl.cpp: (HTMLSelectElementImpl::parseAttribute):
+        Just ignore the style set by livepage.apple.com, so we get a too-big
+        "Search by Google" rather than a cut off "Search by Goo".
+
 2003-04-04  David Hyatt  <hyatt@apple.com>
 
 	Fix for the Search button cutoff on livepage.apple.com  We
